--- a/src/workshops/styleEditor/styleEditor.html
+++ b/src/workshops/styleEditor/styleEditor.html
@@ -28,5 +28,6 @@
     <animation params="{ animation: elementStyleAnimation, onUpdate: onAnimationUpdate }"></animation>
     <box-editor params="{ box: elementStyleBox, onUpdate: onBoxUpdate }"></box-editor>
     <transform params="{ transform: elementStyleTransform, onUpdate: onTransformUpdate }"></transform>
+    <transition params="{ transition: elementStyleTransition, onUpdate: onTransitionUpdate }"></transition>
     <!-- /ko -->
 </fieldset>
