Added "transitions" style plugin.

--- a/src/workshops/styleEditor/styleEditor.html
+++ b/src/workshops/styleEditor/styleEditor.html
@@ -26,7 +26,8 @@
     <background params="{ background: elementStyleBackground, onUpdate: onBackgroundUpdate }"></background>
     <shadow-editor-group params="{ shadow: elementStyleShadow, onUpdate: onShadowUpdate }"></shadow-editor-group>
     <animation params="{ animation: elementStyleAnimation, onUpdate: onAnimationUpdate }"></animation>
-    <box-editor params="{ box: elementStyleBox, onUpdate: onBoxUpdate }"></box-editor>
+    <transition params="{ transition: elementStyleTransition, onUpdate: onTransitionUpdate }"></transition>
     <transform params="{ transform: elementStyleTransform, onUpdate: onTransformUpdate }"></transform>
+    <box-editor params="{ box: elementStyleBox, onUpdate: onBoxUpdate }"></box-editor>
     <!-- /ko -->
 </fieldset>
