Bug 4883515: [Programmatic Access-API Management-Styles-MAS3.3.2] Form elements must have labels (.form-control)

--- a/src/workshops/colors/colorEditor.html
+++ b/src/workshops/colors/colorEditor.html
@@ -1,8 +1,8 @@
 <div class="form">
     <div class="form-group">
         <button class="btn btn-info" type="button" data-bind="tooltipToggle: 'Name of the color'"></button>
-        <label>Color name</label>
-        <input type="text" class="form-control" spellcheck="false" data-bind="textInput: colorName">
+        <label for="colorName">Color name</label>
+        <input id="colorName" type="text" class="form-control" spellcheck="false" data-bind="textInput: colorName">
     </div>
 
     <!-- ko if: colorValue -->
