Bug 4889682: Keyboard Navigation - API Management -Styles] After activating ‘Add color’ button, keyboard focus moving behind of the 'Add color' popup.

--- a/src/workshops/colors/colorEditor.html
+++ b/src/workshops/colors/colorEditor.html
@@ -2,7 +2,7 @@
     <div class="form-group">
         <button class="btn btn-info" type="button" data-bind="tooltipToggle: 'Name of the color'"></button>
         <label for="colorName">Color name</label>
-        <input id="colorName" type="text" class="form-control" spellcheck="false" data-bind="textInput: colorName">
+        <input id="colorName" type="text" class="form-control" spellcheck="false" data-bind="textInput: colorName, focus: 'auto'">
     </div>
 
     <!-- ko if: colorValue -->
