Bug 4889465: [Programmatic Access-API Management-Pages-MAS3.3.2]Form elements must have labels (.form-control).

--- a/src/workshops/googleFonts/googleFonts.html
+++ b/src/workshops/googleFonts/googleFonts.html
@@ -1,7 +1,7 @@
 <fieldset class="flex-item form">
     <div class="form-group">
         <input class="form-control" type="search" data-bind="textInput: searchPattern, valueUpdate: 'keyup'"
-            placeholder="Search fonts..." />
+            placeholder="Search fonts..." aria-label="Search fonts" />
     </div>
 </fieldset>
 
