--- a/src/workshops/colors/colorSelector.html
+++ b/src/workshops/colors/colorSelector.html
@@ -2,17 +2,17 @@
     <h1>Color</h1>
     <hr/>
 
-    <ul class="palette">
-        <li class="color-box" data-bind="css: { selected: !$component.selectedColor() }">
-            <a href="#" title="Clear color" class="color" data-bind="click: $component.clearColors">
+    <div class="palette">
+        <div class="color-box" data-bind="css: { selected: !$component.selectedColor() }">
+            <a href="#" title="Clear color" class="color" data-bind="click: $component.clearColors, focus: 'auto'">
                 <i class="paperbits-icon paperbits-ban"></i>
             </a>
-        </li>
+        </div>
 
         <!-- ko foreach: { data: colors, as: 'color' } -->
-        <li class="color-box" data-bind="css: { selected: color === $component.selectedColor() }">
+        <div class="color-box" data-bind="css: { selected: color === $component.selectedColor() }">
             <a href="#" class="color" data-bind="click: $component.selectColor, attr: { title: color.displayName }, style: { background: color.value }"></a>
-        </li>
+        </div>
         <!--/ko -->
-    </ul>
+    </div>
 </div>
