--- a/src/workshops/shadows/shadowSelector.html
+++ b/src/workshops/shadows/shadowSelector.html
@@ -2,17 +2,18 @@
     <h1>Shadow</h1>
     <hr />
 
-    <ul class="list">
-        <li class="list-item">
-            <a href="#" title="Clear shadow" class="list-item-label" data-bind="click: $component.clearShadow">
+    <div class="list">
+        <a href="#" class="list-item" title="Clear shadow" data-bind="click: $component.clearShadow, focus: 'auto'">
+            <span class="list-item-label">
                 (Inherit)
-            </a>
-        </li>
+            </span>
+        </a>
 
         <!-- ko foreach: { data: shadows, as: 'shadow' } -->
-        <li class="list-item shadow-box" data-bind="css: { selected: shadow.key == $component.selectedShadow() }">
-            <a href="#" class="list-item-label" data-bind="click: $component.selectShadow, text: shadow.displayName"></a>
-        </li>
+        <a href="#" class="list-item shadow-box"
+            data-bind="click: $component.selectShadow, css: { selected: shadow.key == $component.selectedShadow() }">
+            <span class="list-item-label" data-bind="text: shadow.displayName"></span>
+        </a>
         <!--/ko -->
-    </ul>
+    </div>
 </div>
