--- a/src/workshops/googleFonts/googleFonts.html
+++ b/src/workshops/googleFonts/googleFonts.html
@@ -1,6 +1,6 @@
 <fieldset class="flex-item form">
     <div class="form-group">
-        <input class="form-control" type="search" data-bind="textInput: searchPattern, valueUpdate: 'keyup'"
+        <input class="form-control" type="search" data-bind="textInput: searchPattern, valueUpdate: 'keyup', focus: 'auto'"
             placeholder="Search fonts..." aria-label="Search fonts" />
     </div>
 </fieldset>
