--- a/src/workshops/styleEditor/styleEditor.html
+++ b/src/workshops/styleEditor/styleEditor.html
@@ -7,8 +7,8 @@
         <div id="miscellaneousCollapse" class="collapse form-group-collapse">
             <div class="form-group">
                 <button class="btn btn-info" type="button" data-bind="tooltipToggle: 'Name of the style'"></button>
-                <label>Style name</label>
-                <input type="text" class="form-control" spellcheck="false" data-bind="textInput: styleName">
+                <label for="styleName">Style name</label>
+                <input id="styleName" type="text" class="form-control" spellcheck="false" data-bind="textInput: styleName, focus: 'auto'">
             </div>
             <!-- ko if: elementStates -->
             <div class="form-group">
