Bug 4898877: [Screen Reader - API Management- Font Edit]: Screen reader is not reading the position details for "list item" present under "add font" dialog box.

--- a/src/workshops/googleFonts/googleFonts.html
+++ b/src/workshops/googleFonts/googleFonts.html
@@ -5,13 +5,11 @@
     </div>
 </fieldset>
 
-<fieldset class="form flex-item flex-item-grow list fonts"
-    data-bind="scrollable: { onEndReach: $component.loadNextPage }">
+<fieldset class="form flex-item flex-item-grow list fonts" role="list" data-bind="scrollable: { onEndReach: $component.loadNextPage }" aria-live="polite">
     <!-- ko foreach: { data: fonts, as: 'font' } -->
-    <div class="list-item font-box"
-        data-bind="css: { selected: font === $component.selectedFont() }, scrolledIntoView: { onInView: font.loadPreview }">
+    <div class="list-item font-box" data-bind="css: { selected: font === $component.selectedFont() }, scrolledIntoView: { onInView: font.loadPreview }">
         <style data-bind="jss: preview"></style>
-        <a href="#" class="font-family"
+        <a href="#" role="listitem" class="font-family"
             data-bind="click: $component.selectFont, text: font.family, style: { 'font-family': font.family }">
         </a>
     </div>
