Improvement for "scrollable" and "focus" binding handlers.

--- a/src/workshops/animations/animationSelector.html
+++ b/src/workshops/animations/animationSelector.html
@@ -3,7 +3,7 @@
     <hr />
 
     <div class="flex-container flex-container-column list-container">
-        <ul class="list" data-bind="scrollable: {}">
+        <ul class="list" data-bind="scrollable: true">
             <li class="list-item">
                 <a href="#" title="Clear animation" class="list-item-label" data-bind="click: $component.clearAnimations">
                     (Inherit)
