--- a/src/workshops/colors/colorSelector.html
+++ b/src/workshops/colors/colorSelector.html
@@ -4,7 +4,7 @@
 
     <div class="palette">
         <div class="color-box" data-bind="css: { selected: !$component.selectedColor() }">
-            <a href="#" title="Clear color" class="color" data-bind="click: $component.clearColors, focus: 'auto'">
+            <a href="#" title="Clear color" class="color" data-bind="click: $component.clearColors, focus: true">
                 <i class="paperbits-icon paperbits-ban"></i>
             </a>
         </div>
