--- a/src/workshops/fonts/fontSelector.html
+++ b/src/workshops/fonts/fontSelector.html
@@ -5,7 +5,7 @@
     <hr />
 
     <div class="list fonts" role="list">
-        <a href="#" role="listitem" class="list-item font-box" title="Clear font" data-bind="click: $component.clearFonts, focus: 'auto'">
+        <a href="#" role="listitem" class="list-item font-box" title="Clear font" data-bind="click: $component.clearFonts, focus: true">
             <span class="font-family">
                 (Inherit)
             </span>
