--- a/src/workshops/shadows/shadowSelector.html
+++ b/src/workshops/shadows/shadowSelector.html
@@ -3,7 +3,7 @@
     <hr />
 
     <div class="list">
-        <a href="#" class="list-item" title="Clear shadow" data-bind="click: $component.clearShadow, focus: 'auto'">
+        <a href="#" class="list-item" title="Clear shadow" data-bind="click: $component.clearShadow, focus: true">
             <span class="list-item-label">
                 (Inherit)
             </span>
