Fixed number of accessibility issues.

--- a/src/workshops/animations/animationEditor.html
+++ b/src/workshops/animations/animationEditor.html
@@ -1,6 +1,6 @@
 <div class="form-group form-group-collapsible">
     <label class="form-label">
-        <a href="#" class="form-group-toggle" data-bind="collapse: '#animationCollapse'"></a>
+        <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#animationCollapse'"></a>
         <b>Animation</b>
     </label>
 
