--- a/src/workshops/boxes/boxEditor.html
+++ b/src/workshops/boxes/boxEditor.html
@@ -1,7 +1,7 @@
 <fieldset class="form flex-item flex-item-grow" data-bind="scrollable: true">
     <div class="form-group form-group-collapsible">
         <label class="form-label">
-            <a href="#" class="form-group-toggle" data-bind="collapse: '#paddingCollapse'"></a>
+            <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#paddingCollapse'"></a>
             <b>Box</b>
         </label>
         <div id="paddingCollapse" class="collapse form-group-collapse">
