--- a/src/workshops/transform/transform.html
+++ b/src/workshops/transform/transform.html
@@ -1,8 +1,8 @@
 <div class="form-group form-group-collapsible">
     <label class="form-label">
-        <a href="#" class="form-group-toggle" data-bind="collapse: '#transformCollapse'"></a>
+        <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#transformCollapse'"></a>
         <b>Transform</b>
-        <button class="btn btn-info" type="button" data-bind="tooltipToggle: 'Manage element transformations'"></button>
+        <button class="btn btn-info" type="button" title="Help" data-bind="tooltipToggle: 'Manage element transformations'"></button>
     </label>
 
     <div id="transformCollapse" class="collapse form-group-collapse">
