--- a/src/workshops/typography/typography.html
+++ b/src/workshops/typography/typography.html
@@ -1,8 +1,8 @@
 <div class="form-group form-group-collapsible">
     <label class="form-label">
-        <a href="#" class="form-group-toggle" data-bind="collapse: '#typographyCollapse'"></a>
+        <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#typographyCollapse'"></a>
         <b>Typography</b>
-        <button class="btn btn-info" type="button" data-bind="tooltipToggle: 'Manage text appearance'"></button>
+        <button class="btn btn-info" type="button" title="Help" data-bind="tooltipToggle: 'Manage text appearance'"></button>
     </label>
 
     <div id="typographyCollapse" class="collapse form-group-collapse">
