--- a/src/workshops/colors/colorEditor.html
+++ b/src/workshops/colors/colorEditor.html
@@ -1,6 +1,6 @@
 <div class="form">
     <div class="form-group">
-        <button class="btn btn-info" type="button" data-bind="tooltipToggle: 'Name of the color'"></button>
+        <button class="btn btn-info" type="button" title="Help" data-bind="tooltipToggle: 'Name of the color'"></button>
         <label for="colorName">Color name</label>
         <input id="colorName" type="text" class="form-control" spellcheck="false" data-bind="textInput: colorName, focus: true">
     </div>
