--- a/src/workshops/container/container.html
+++ b/src/workshops/container/container.html
@@ -1,9 +1,9 @@
 <div class="form-group form-group-collapsible">
     <label class="form-label">
-        <a href="#" class="form-group-toggle" data-bind="collapse: '#alignmentCollapse'"></a>
+        <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#alignmentCollapse'"></a>
         <b>Content alignment</b>
         <button class="btn btn-info" type="button"
-            data-bind="tooltipToggle: 'Align content inside the container. Depending on viewport, the alignment can be different, following mobile-first approach. If not specified in current one, container applies configuration from closest smaller viewports.'"></button>
+            title="Help" data-bind="tooltipToggle: 'Align content inside the container. Depending on viewport, the alignment can be different, following mobile-first approach. If not specified in current one, container applies configuration from closest smaller viewports.'"></button>
     </label>
 
     <div id="alignmentCollapse" class="collapse form-group-collapse">
@@ -43,10 +43,10 @@
 
 <div class="form-group form-group-collapsible">
     <label class="form-label">
-        <a href="#" class="form-group-toggle" data-bind="collapse: '#contentFlowCollapse'"></a>
+        <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#contentFlowCollapse'"></a>
         <b>Content flow</b>
         <button class="btn btn-info" type="button"
-            data-bind="tooltipToggle: 'Manage scrolling settings for container'"></button>
+            title="Help" data-bind="tooltipToggle: 'Manage scrolling settings for container'"></button>
     </label>
     <div id="contentFlowCollapse" class="collapse form-group-collapse">
         <label class="form-label">
