--- a/src/workshops/shadows/shadowEditor.html
+++ b/src/workshops/shadows/shadowEditor.html
@@ -1,12 +1,12 @@
 <fieldset class="form flex-item flex-item-grow" data-bind="scrollable: true">
     <div class="form-group form-group-collapsible">
         <label class="form-label">
-            <a href="#" class="form-group-toggle" data-bind="collapse: '#mainCollapse'"></a>
+            <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#mainCollapse'"></a>
             <b>Main</b>
         </label>
         <div id="mainCollapse" class="collapse form-group-collapse">
             <div class="form-group">
-                <button class="btn btn-info" type="button" data-bind="tooltipToggle: 'Name of the style'"></button>
+                <button class="btn btn-info" type="button" title="Help" data-bind="tooltipToggle: 'Name of the style'"></button>
                 <label for="style-name">Style name</label>
                 <input id="style-name" type="text" class="form-control" spellcheck="false" data-bind="textInput: styleName">
             </div>
@@ -18,7 +18,7 @@
 
     <div class="form-group form-group-collapsible">
         <label class="form-label">
-            <a href="#" class="form-group-toggle" data-bind="collapse: '#miscellaneousCollapse'"></a>
+            <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#miscellaneousCollapse'"></a>
             <b>Shadow</b>
         </label>
         <div id="miscellaneousCollapse" class="collapse form-group-collapse">
