--- a/src/workshops/shadows/shadowEditorGroup.html
+++ b/src/workshops/shadows/shadowEditorGroup.html
@@ -1,6 +1,6 @@
 <div class="form-group form-group-collapsible">
     <label class="form-label">
-        <a href="#" class="form-group-toggle" data-bind="collapse: '#shadowCollapse'"></a>
+        <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#shadowCollapse'"></a>
         <b>Shadow</b>
     </label>
 
