--- a/src/workshops/typography/typography.html
+++ b/src/workshops/typography/typography.html
@@ -40,8 +40,8 @@
         </div>
 
         <div class="form-group">
-            <label>Font size</label>
-            <input type="number" class="form-control" placeholder="(Inherit)" min="5" max="100" data-bind="textInput: $component.fontSize" />
+            <label for="fontSize">Font size</label>
+            <input id="fontSize" type="number" class="form-control" placeholder="(Inherit)" min="5" max="100" data-bind="textInput: $component.fontSize" />
         </div>
 
         <div class="form-group">
@@ -51,8 +51,8 @@
         </div>
 
         <div class="form-group">
-            <label>Line height</label>
-            <input type="number" class="form-control" placeholder="(Inherit)" min="1" max="100" data-bind="textInput: $component.lineHeight" />
+            <label for="lineHeight">Line height</label>
+            <input id="lineHeight" type="number" class="form-control" placeholder="(Inherit)" min="1" max="100" data-bind="textInput: $component.lineHeight" />
         </div>
 
         <div class="form-group">
