--- a/src/workshops/shadows/shadowEditor.html
+++ b/src/workshops/shadows/shadowEditor.html
@@ -6,19 +6,24 @@
         </label>
         <div id="mainCollapse" class="collapse form-group-collapse">
             <div class="form-group">
-                <button class="btn btn-info" type="button" title="Help" data-bind="tooltipToggle: 'Name of the style'"></button>
+                <button class="btn btn-info" type="button" title="Help"
+                    data-bind="tooltipToggle: 'Name of the style'"></button>
                 <label for="style-name">Style name</label>
-                <input id="style-name" type="text" class="form-control" spellcheck="false" data-bind="textInput: styleName">
+                <input id="style-name" type="text" class="form-control" spellcheck="false"
+                    data-bind="textInput: styleName">
             </div>
-            <!-- ko if: colorValue -->
-            <div data-bind="colorPicker: { selectedColor: colorValue }"></div>
-            <!-- /ko -->
+            <div class="color-picker">
+                <!-- ko if: colorValue -->
+                <div data-bind="colorPicker: { selectedColor: colorValue }"></div>
+                <!-- /ko -->
+            </div>
         </div>
     </div>
 
     <div class="form-group form-group-collapsible">
         <label class="form-label">
-            <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#miscellaneousCollapse'"></a>
+            <a href="#" class="form-group-toggle" title="Toggle section"
+                data-bind="collapse: '#miscellaneousCollapse'"></a>
             <b>Shadow</b>
         </label>
         <div id="miscellaneousCollapse" class="collapse form-group-collapse">
@@ -32,11 +37,13 @@
             </div>
             <div class="form-group">
                 <label for="offsetX">Offset X (in px)</label>
-                <input id="offsetX" type="range" min="-50" max="50" class="form-control" data-bind="textInput: offsetX" />
+                <input id="offsetX" type="range" min="-50" max="50" class="form-control"
+                    data-bind="textInput: offsetX" />
             </div>
             <div class="form-group">
                 <label for="offsetY">Offset Y (in px)</label>
-                <input id="offsetY" type="range" min="-50" max="50" class="form-control" data-bind="textInput: offsetY" />
+                <input id="offsetY" type="range" min="-50" max="50" class="form-control"
+                    data-bind="textInput: offsetY" />
             </div>
             <div class="form-group">
                 <label class="form-label">
