removed styleService dependency in style compiller and plugins, implemented appearance selector

--- a/src/styleGuide/styleGuide.html
+++ b/src/styleGuide/styleGuide.html
@@ -254,6 +254,9 @@
                 </div>
                 <!--/ko-->
                 <div class="style-card style-card-empty">
+                    <!-- <a href="#" class="btn-round" data-bind="balloon: { component: { name: 'style-snippet-selector', params: { snippetType: 'components/button', onSelect: $component.onSnippetSelected } } }">
+                        <i class="paperbits-icon paperbits-color"></i>
+                    </a> -->
                     <button class="btn-round" data-bind="click: $component.addButtonVariation"></button>
                     <div class="style-card-label">
                         Add variation
